@@ -7,7 +7,6 @@ import org.springframework.core.io.Resource;
 import org.springframework.web.servlet.handler.SimpleUrlHandlerMapping;
 import org.springframework.web.servlet.resource.ResourceHttpRequestHandler;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -29,7 +28,7 @@ public class FaviconConfiguration {
                 = new ResourceHttpRequestHandler();
         ClassPathResource classPathResource
                 = new ClassPathResource("com/foreach/images/");
-        List<Resource> locations = Arrays.asList(classPathResource);
+        List<Resource> locations = List.of(classPathResource);
         requestHandler.setLocations(locations);
         return requestHandler;
     }
